# macross

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot.yml
src/: lib.rs  newtype.rs  secret.rs  sqlite_migration.rs
tests/: secret.rs
