[package]
name = "macross"
version = "0.0.0"
edition = "2021"

[features]
ext_serde = ["serde"]
get_port = ["thiserror"]
newtype = []
secret = []
sqlite_migrations = ["anyhow", "indoc", "rusqlite"]

[dependencies]
anyhow = { version = "1.0", optional = true }
indoc = { version = "1.0", optional = true }
rusqlite = { version = "0.28", optional = true }
serde = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
fastrand = "1.8"
serde_json = "1.0"
