[package]
name = "macross"
version = "0.0.0"
edition = "2021"

[features]
all = ["get_port", "newtype", "secret", "serde", "sqlite_migration"]
get_port = ["thiserror"]
newtype = []
secret = []
sqlite_migration = ["indoc", "rusqlite"]

[dependencies]
indoc = { version = "1.0", optional = true }
rusqlite = { version = "0.28", optional = true }
serde = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
fastrand = "1.8"
serde_json = "1.0"
